# tesseracts

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  cfg.example.toml
dappnode/: Dockerfile  dappnode_package.json  docker-compose.yml  mainnet.toml  package.sh
dappnode/goerli/: cfg.goerli.toml  dappnode_package.json  docker-compose.yml
extra/: test.sol
extra/dappnode-goerli/: Dockerfile  cfg.goerli.toml  dappnode_package.json  docker-compose.yml  package.sh
extra/geth-devnet/: start.sh
extra/geth-devnet/config/: genesis.json  tesseracts.toml
src/: contract.rs  db.rs  dbgapi.rs  main.rs  model.rs  reader.rs  render.rs  scanner.rs  state.rs  stream.rs  types.rs
src/bcio/: error.rs  mod.rs  reader.rs  scanner.rs
src/bootstrap/: config.rs  error.rs  mod.rs  staticres.rs
src/clique/: mod.rs  types.rs  web3.rs
src/db/: appdb.rs  error.rs  iterators.rs  mod.rs  tests.rs  types.rs  utils.rs
src/eth/: contract.rs  mod.rs  reader.rs  scanner.rs  types.rs
src/eth/contract/: error.rs  mod.rs  parser.rs  (+1 more)
src/explorer/: address.rs  block.rs  clique.rs  contract.rs  error.rs  home.rs  html.rs  mod.rs  neb.rs  paginate.rs  server.rs  tx.rs  utils.rs
src/geth/: clique.rs  mod.rs  web3.rs
src/scrapper/: error.rs  mod.rs  scrapper.rs
src/ui/: address.rs  block.rs  contract.rs  error.rs  home.rs  html.rs  mod.rs  neb.rs  tx.rs  utils.rs
static/tmpl/: address.handlebars  block.handlebars  config.handlebars  footer.handlebars  header.handlebars  home.handlebars  neb.handlebars  tx.handlebars
static/web/: common.js  purecss-tabs.css  style.css
tmpl/: address.handlebars  block.handlebars  footer.handlebars  header.handlebars  home.handlebars  neb.handlebars  tx.handlebars
(+4 files in other folders)
