[package]
name = "tesseracts"
version = "0.1.0"
authors = ["Adrià Massanet <adria@codecontext.io>"]

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
rustc-hex = "2.0.1"
handlebars = "1.1.0"
rust-embed = "4.2.0"
lazy_static = "1.2.0"
serde = "1.0.82"
serde_json = "1.0.33"
serde_cbor = "0.9.0"
serde_derive = "1.0.82"
rocksdb = "0.10.1"
rand = "0.6.1"
ctrlc = "3.1.1"
toml = "0.4.10"
rouille = "3.0.0"
ethabi = "6.1.0"
reqwest = "0.9.5"
keccak-hash = "0.1.2"
chrono = "0.4.6"
log = "0.4.6"
stderrlog = "0.4.1"
structopt = "0.2.14"
rlp = "0.3.0"
ethkey = { git = "https://github.com/paritytech/parity.git" }
error-chain = { version = "0.12", default-features = false }
